[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vfips"
version = "1.0.0"
description = "A Perceptual Quality Metric for Video Frame Interpolation"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vfips = ["*.pytorch"]
